# newyorkcity_tss_server

./: BUILD.md  README.md
.github/workflows/: rust.yml
gotham-client/: .gitignore  Cargo.toml  makefile
gotham-client/src/: lib.rs  main.rs
gotham-client/src/utilities/: requests.rs
gotham-client/src/wallet/: mod.rs
gotham-client/wallet/: data.json
gotham-server/: Cargo.toml
gotham-server/src/: lib.rs  tests.rs
gotham-server/src/routes/: ecdsa.rs
gotham-server/src/storage/: db.rs
integration-tests/: Cargo.toml  README.md
newyork-server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ubuntu  Local.toml  Makefile  README.md  Rocket.toml  Settings.toml  Staging.toml  abi.json
newyork-server/.github/workflows/: rust.yml
newyork-server/src/: lib.rs  main.rs  server.rs  tests.rs
newyork-server/src/auth/: cognito.rs  guards.rs  jwt.rs  mod.rs  passthrough.rs
newyork-server/src/routes/: ecdsa.rs  eddsa.rs  eth.rs  mod.rs  schnorr.rs
newyork-server/src/storage/: db.rs  mod.rs
newyork-server/src/utils/: erc20.rs  mod.rs  requests.rs  settings.rs
newyork-utilities/server/: buildspec.yml
newyork-utilities/server/docker-build-img/: Dockerfile
