[package]
name = "newyork-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies]
rocksdb = "0.18.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time-test = "0.2.1"
log = "0.4"
env_logger = "0.9"
uuid = { version = "0.8.2", features = ["v4"] }
error-chain = "0.12.0"
rust-crypto = "0.2"
hex = "0.4.3"
floating-duration = "0.1.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
envy = "0.4.2"
web3 = "0.18.0"
futures = "0.3"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }
ethers = "0.6"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
branch = "2.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
branch = "master"

# [dependencies.multi-party-eddsa]
# git = "https://github.com/KZen-networks/multi-party-eddsa"
# tag = "v0.2.3"

# [dependencies.multi-party-schnorr]
# git = "https://github.com/KZen-networks/multi-party-schnorr"
# tag = "v0.4.5"
